# unified-cfg

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  meson.build
doc/: Doxyfile
ext/: headers.py  meson.build
include/: cfg.h  cfg_interface.h  config.h  core.h  meson.build  render.h  settings.h  value.h
scripts/: dist.py  dist.sh
src/: config.cpp  env.cpp  env.h  env_reflector.h  hardware.cpp  hardware.h  main.cpp  meson.build  parser.cpp  parser.h  render-internal.h  render.cpp  render_interface.cpp  settings.cpp  value.cpp
tests/: meson.build  run-test.py  test_cpu_cores.yaml  test_doc.yaml  test_env.yaml  test_get.yaml  test_get2.yaml  test_get_errors.yaml  test_group_name.yaml  test_hardware.yaml  test_list.yaml  test_list_empty.yaml  test_list_tabulate.yaml  test_meminfo.yaml  test_multilines.yaml  test_override.yaml  test_recursive.yaml  test_render.yaml  test_shell.yaml  test_strings.yaml  test_tmpl_errors.yaml
